# FromFileToWave

./: .gitignore  CMakeLists.txt  FromFileToWave.jucer  LICENSE  README.md
data/: generate_sine.py  generate_sine_32bit.py  testFile.txt
src/: Defines.h  Envelope.cpp  Envelope.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WaveTable.cpp  WaveTable.h  WaveTableFileReader.cpp  WaveTableFileReader.h  WaveTableOsc.cpp  WaveTableOsc.h  WaveTableSlotComponent.cpp  WaveTableSlotComponent.h  XYPadComponent.cpp  XYPadComponent.h
